# jacobtorch

./: README.md  basicnn.py  pyproject.toml  tensorized.py
