[project]
name = "jacobtorch"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jacob G-W", email = "jacoblevgw@gmail.com"},
]
dependencies = ["torch>=2.5.1", "matplotlib>=3.9.4", "ipykernel>=6.29.5"]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
